# clean-mcp

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
src/clean/: __init__.py
src/clean/core/: __init__.py  config.py  errors.py  models.py  protocols.py  types.py
src/clean/db/: __init__.py  metadata.py  models.py
src/clean/embedding/: local.py
src/clean/formatting/: json.py  rich.py  tiered.py  toon.py
src/clean/indexing/: call_graph.py  chunker.py  file_scanner.py  incremental.py  indexer.py  staleness.py
src/clean/local/: mcp_server.py
src/clean/mcp/: shared.py
src/clean/parsing/: base.py  call_extractor.py  javascript.py  python.py  registry.py  typescript.py
src/clean/repo/: __init__.py  manager.py
src/clean/search/: context.py  hybrid.py  searcher.py
src/clean/services/: container.py  project_manager.py
src/clean/stats/: tracker.py
src/clean/storage/: lancedb.py
src/clean/util/: file_tree.py  hashing.py  logging.py  security.py  source_reader.py
tests/: conftest.py
tests/e2e/: test_mcp_server.py
tests/fixtures/: sample.js  sample.py  sample.ts
tests/integration/: test_incremental_reindex.py  test_index_and_search.py
tests/unit/: test_call_graph.py  test_config.py  test_context.py  test_incremental.py  test_indexer.py  test_lancedb_store.py  test_local_embedder.py  test_metadata.py  test_models.py  test_repo_manager.py  test_searcher.py  test_security_patterns.py  test_staleness.py  test_toon_formatter.py
tests/unit/parsing/: test_call_extractor.py  (+2 more)
