[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clean"
version = "1.0.0"
description = "Local semantic code search MCP server for AI agents"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Pratham" },
]
keywords = ["mcp", "semantic-search", "code-search", "ai", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "lancedb>=0.6.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.5",
]

[project.scripts]
clean = "clean.local.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["clean"]

[tool.coverage.report]
fail_under = 60
